# ndis

./: .replit  1- JOCC-2204-1016 ammar[1] (AutoRecovered).docx  app.py  check_pynq.py  data_preprocessing.py  database.py  dataset_handler.py  document_structure.json  dpi_engine.py  extract_docx.py  fpga_interface.py  fpga_overlay_generator.py  main.py  model.py  network_dashboard.py  nids.db  nids_documentation.html  nids_documentation.md  nids_documentation.tex  packet_analyzer.py  pynq_deployment.py  pynq_main.py  pyproject.toml  real_network_simulator.py  simulator.py  template.tex  training.py  utils.py
python-web-attack-detection/: web-attack-detection-using-CNN-BiLSTM.ipynb
