[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "scapy-python3>=0.26",
    "scapy>=2.6.1",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.45.0",
    "tensorflow>=2.14.0",
]
