[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "scapy-python3>=0.26",
    "scapy>=2.6.1",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.45.0",
    "tensorflow>=2.14.0",
    "docx>=0.2.4",
    "paramiko>=3.5.1",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
AA-module = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ABlooper = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
AnalysisG = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
AutoRAG = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
BERTeam = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
BxTorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
Byaldi = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
CALM-Pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
COPEX-high-rate-compression-quality-metrics = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
CityLearn = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
CoCa-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
CoLT5-attention = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ComfyUI-EasyNodes = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
Crawl4AI = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
DALL-E = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
DI-toolkit = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
DatasetRising = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
DeepCache = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
DeepMatter = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
Draugr = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ESRNN = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
En-transformer = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ExpoSeq = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
FLAML = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
FSRS-Optimizer = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
GANDLF = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
GQLAlchemy = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
GhostScan = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
GraKeL = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
HEBO = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
IOPaint = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ISLP = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
InvokeAI = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
JAEN = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
KapoorLabs-Lightning = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
LightAutoML = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
LingerGRN = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
MMEdu = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
MRzeroCore = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
Modeva = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
NeuralFoil = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
NiMARE = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
NinjaTools = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
OpenHosta = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
OpenNMT-py = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
POT = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
PVNet = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
PaLM-rlhf-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
PepperPepper = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
PiML = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
Poutyne = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
QNCP = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
RAGatouille = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
RareGO = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
RealtimeSTT = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
RelevanceAI-Workflows-Core = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
Resemblyzer = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ScandEval = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
Simba-UW-tf-dev = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
SwissArmyTransformer = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
TPOT = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
TTS = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
TorchCRF = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
TotalSegmentator = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
UtilsRL = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
WhisperSpeech = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
XAISuite = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
a-unet = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
a5dev = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
accelerate = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
accelerated-scan = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
accern-xyme = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
achatbot = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
acids-rave = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
actorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
acvl-utils = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
adabelief-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
adam-atan2-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
adan-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
adapters = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
admin-torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
adtoolbox = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
adversarial-robustness-toolbox = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aeiou = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aeon = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
africanwhisper = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ag-llama-api = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
agentdojo = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
agilerl = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ai-edge-torch-nightly = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ai-parrot = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ai-python = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ai-transform = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ai2-olmo = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ai2-olmo-core = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ai2-tango = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aicmder = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aider-chat = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aider-chat-x = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aif360 = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aihwkit = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aimodelshare = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
airllm = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
airtestProject = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
airunner = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aisak = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aislib = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aisquared = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aistore = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aithree = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
akasha-terminal = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
alibi = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
alibi-detect = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
alignn = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
all-clip = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
allennlp = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
allennlp-models = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
allennlp-pvt-nightly = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
allophant = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
allosaurus = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aloy = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
alpaca-eval = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
alphafold2-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
alphafold3-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
alphamed-federated = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
alphawave = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
amazon-braket-pennylane-plugin = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
amazon-photos = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
anemoi-graphs = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
anemoi-models = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
anomalib = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
apache-beam = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
apache-tvm = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aperturedb = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aphrodite-engine = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aqlm = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
arcAGI2024 = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
archisound = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
argbind = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
arize = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
arm-pytorch-utilities = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
array-api-compat = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
arus = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
assert-llm-tools = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
asteroid = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
asteroid-filterbanks = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
astra-llm = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
astrovision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
atomate2 = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
attacut = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
audio-diffusion-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
audio-encoders-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
audio-separator = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
audiocraft = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
audiolm-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
auralis = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
auraloss = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
auto-gptq = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
autoawq = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
autoawq-kernels = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
"autogluon.multimodal" = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
"autogluon.tabular" = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
"autogluon.timeseries" = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
autotrain-advanced = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
avdeepfake1m = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
aws-fortuna = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ax-platform = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
azureml-automl-dnn-vision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
azureml-contrib-automl-dnn-forecasting = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
azureml-evaluate-mlflow = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
azureml-metrics = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
azureml-train-automl = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
b2bTools = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
backpack-for-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
balrog-nle = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
batch-face = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
batchalign = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
batchgeneratorsv2 = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
batchtensor = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bbrl = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
benchpots = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bent = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bert-score = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bertopic = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bertviz = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bestOf = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
betty-ml = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
big-sleep = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bigdl-core-cpp = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bigdl-core-npu = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bigdl-llm = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bigdl-nano = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
"bioimageio.core" = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bitfount = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bitsandbytes = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bittensor = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bittensor-cli = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
blackboxopt = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
blanc = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
blindai = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
bm25-pt = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
boltz = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
botorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
boxmot = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
brainchain = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
braindecode = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
brevitas = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
briton = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
browsergym-visualwebarena = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
buzz-captions = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
byotrack = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
byzerllm = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
c4v-py = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
calflops = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
came-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
camel-ai = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
camel-tools = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cannai = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
captum = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
carte-ai = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
carvekit-colab = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
catalyst = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
causalml = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
causalnex = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
causy = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cbrkit = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cca-zoo = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cdp-backend = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cellacdc = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cellfinder = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cellpose = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cellxgene-census = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
chattts = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
chemprop = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
chgnet = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
chitra = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
circuitsvis = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cjm-yolox-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
clarinpl-embeddings = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
class-resolver = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
classifier-free-guidance-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
classiq = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
classy-core = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
clean-fid = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cleanvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
clip-anytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
clip-benchmark = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
clip-by-openai = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
clip-interrogator = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
clip-retrieval = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cltk = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
clu = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
clusterops = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cnocr = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cnstd = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
coba = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cofi = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
colbert-ai = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
colpali-engine = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
compel = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
composabl-ray = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
composabl-ray-dev = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
composabl-train = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
composabl-train-dev = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
composer = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
compressai = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
compressed-tensors = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
compressed-tensors-nightly = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
concrete-python = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
confit = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
conformer = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
contextualSpellCheck = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
continual-inference = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
controlnet-aux = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
convokit = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
coola = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
coqui-tts = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
coqui-tts-trainer = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
craft-text-detector = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
creme = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
crocodile = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
crowd-kit = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cryoSPHERE = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
csle-common = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
csle-system-identification = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ctgan = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
curated-transformers = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cut-cross-entropy = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cvat-sdk = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
cybertask = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
d3rlpy = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dalle-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dalle2-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
danila-lib = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
danling = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
darts = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
darwin-py = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
data-gradients = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
datachain = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dataclass-array = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dataeval = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
datarobot-drum = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
datarobotx = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
datasets = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
datumaro = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dctorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deep-utils = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deepchecks = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deepchem = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deepctr-torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deepecho = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deepepochs = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deepforest = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deeplabcut = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deepmd-kit = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deepmultilingualpunctuation = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deepparse = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deeprobust = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deepsparse = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deepsparse-nightly = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
deepspeed = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
denoising-diffusion-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
descript-audio-codec = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
descript-audiotools = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
detecto = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
detoxify = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dgenerate = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dghs-imgutils = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dgl = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dialogy = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dice-ml = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
diffgram = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
diffq = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
diffusers = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
distilabel = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
distrifuser = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dnikit = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
docarray = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
doclayout-yolo = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
docling-ibm-models = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
docquery = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
domino-code-assist = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dreamsim = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dropblock = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
druida = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
dvclive = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
e2-tts-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
e2cnn = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
e3nn = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
easyocr = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ebtorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ecallisto-ng = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
edsnlp = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
effdet = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
einx = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
eir-dl = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
eis1600 = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
eland = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
ema-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
embedchain = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
enformer-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
entmax = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
esm = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
espaloma-charge = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
espnet = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
etils = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
etna = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
evadb = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
evalscope = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
evaluate = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
exllamav2 = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
extractable = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
face-alignment = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
facenet-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
facexlib = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fair-esm = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fairseq = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fairseq2 = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fairseq2n = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
faker-file = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
farm = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fast-bert = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fast-pytorch-kmeans = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fastai = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fastcore = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fastestimator-nightly = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fasttreeshap = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fedml = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
felupe = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
femr = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fer = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fft-conv-pytorch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fickling = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
fireworks-ai = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
